FIREFLY-1379: UI Conversion: Table cleanup - support dark mode - use Joy 'warning' for highlighted row - fix tooltip formatting - fix table not shrinking.

--- a/src/firefly/js/tables/ui/TablePanel.css
+++ b/src/firefly/js/tables/ui/TablePanel.css
@@ -1,10 +1,3 @@
-.TablePanel__checkbox {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-}
-
 .TablePanel_NoData {
     position: absolute;
     top: 60px;
@@ -35,14 +28,6 @@
     flex-direction: column;
 }
 
-.TablePanel__toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    white-space: nowrap;
-}
-
 .TablePanel__table {
     background-color: white;
     display: flex;
@@ -51,17 +36,6 @@
     left: 0;
     right: 0;
     margin: 1px;
-}
-
-.TablePanel__title {
-    height: 18px;
-    border-bottom: 1px solid #A2A0A0;
-    border-right: 1px solid #A2A0A0;
-    border-bottom-right-radius: 4px;
-    padding-right: 7px;
-    background-color: #E3E3E3;
-    display: inline-block;
-    align-self: start;
 }
 
 .TablePanel__options--small {
@@ -219,7 +193,7 @@
 .PagingBar__button {
     height: 16px;
     width: 16px;
-    margin-top: 1px;
+    margin: 1px 2px 0 0;
 }
 
 .PagingBar__button:hover {
@@ -330,20 +304,19 @@ Overriding default fixed-table css
 }
 
 
-.public_fixedDataTable_header, .public_fixedDataTable_scrollbarSpacer, .public_fixedDataTable_header .public_fixedDataTableCell_main {
+.public_fixedDataTableCell_main, .public_fixedDataTableRow_main, .public_fixedDataTable_scrollbarSpacer,
+.public_fixedDataTableRow_highlighted .public_fixedDataTableCell_main,
+.public_fixedDataTable_header .public_fixedDataTableCell_main
+{
     background-image: none;
+    background-color: unset;
     font-weight: unset;
 }
 
-.fixedDataTableLayout_main {
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-}
+/*.fixedDataTableRowLayout_main.highlighted div {*/
+/*    background-color: #ffe8bf !important; !* #d3fad1 *!*/
+/*}*/
 
-.fixedDataTableRowLayout_main.highlighted div {
-    background-color: #ffe8bf !important; /* #d3fad1 */
-}
 
 .fixedDataTableRowLayout_main.related div {
     background-color: #faf4e5;
